# costingapp

./: .gitignore  db.sqlite3  hello.py  manage.py  pyproject.toml
accounts/: admin.py  forms.py  models.py  serializers.py  urls.py  views.py
accounts/migrations/: 0001_initial.py  0002_user_dark_theme.py  0003_customuserpermissions.py  0004_alter_customuserpermissions_options.py  0005_user_files.py  0006_alter_user_phone_1.py  0007_remove_user_role_alter_user_email_and_more.py
accounts/templates/accounts/: user-detail.html  user-list.html
api/: api.py  urls.py
finance/Expenses/: api.py  apps.py  models.py  schemas.py
finance/Expenses/migrations/: 0001_initial.py  0002_remove_expense_category_expense_categories_and_more.py
finance/LabourCostings/: api.py  apps.py  models.py  schemas.py  signals.py  urls.py  views.py
finance/LabourCostings/migrations/: 0001_initial.py  (+6 more)
finance/Overheads/: apps.py  models.py
main/Frontend/: apps.py  urls.py  views.py
people/Customers/: api.py  apps.py  models.py  schemas.py
people/Employees/: api.py  apps.py  models.py  schemas.py  urls.py  views.py
people/Users/: apps.py  models.py
project/Items/: api.py  apps.py  models.py  schemas.py
project/Materials/: apps.py  models.py
project/Projects/: apps.py  forms.py  models.py  urls.py  views.py
project/Quotations/: apps.py  models.py
psenec/: .envtemp  asgi.py  settings.py  urls.py  wsgi.py
psenec/static/: package-lock.json  package.json  tailwind.config.js  tsconfig.json
psenec/templates/: _base.html  base-partial.html  base.html
(+110 files in other folders)
