[project]
name = "costingapp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "django-environ>=0.11.2",
    "django>=5.1.3",
    "django-allauth>=65.2.0",
    "django-cleanup>=9.0.0",
    "django-cotton>=1.3.0",
    "django-ninja>=1.3.0",
    "django-ninja-extra>=0.21.6",
    "pillow>=11.0.0",
    "reportlab>=4.2.5",
]
